# OpenGL-tests

./: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h
OpenGl_Tests/inc/: myCamClass.h
OpenGl_Tests/inc/glad/: glad.h
OpenGl_Tests/src/: glad.c  main.cpp
inc/: model.h  shaderClass.h
shader docs/: basicFrag2.txt  basicVert.txt  lightFragShaderbackup.txt  lightFragShaderpsx.txt  screenQuadFragShader.txt  skyBoxVert.txt
shader docs/default/: vert.txt
shader docs/geometry shader/: geo.txt  vert.txt
shader docs/instancing/: frag2.txt  vert.txt
shader docs/psxshaders/: VERTEXmushroom.txt
src/: main.cpp  model.cpp
